# dotsync

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
docs/: architecture.md  changelog.md  project_status.md  user_manual.md
specs/: init_command.md  module_01_bootstrap.md  module_02_discovery.md  module_03_flagging.md  module_04_git_ops.md  module_05_sync.md  module_06_snapshot.md  module_07_health.md  module_08_cli.md
src/dotsync/: __init__.py  config.py  discovery.py  flagging.py  git_ops.py  health.py  llm_client.py  logging_setup.py  main.py  orchestrator.py  platform_utils.py  snapshot.py  sync.py  ui.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_discovery.py  test_e2e.py  test_flagging.py  test_git_ops.py  test_health.py  test_integration.py  test_llm_client.py  test_orchestrator.py  test_snapshot.py  test_sync.py
